--- a/styles/base.css
+++ b/styles/base.css
@@ -1,8 +1,9 @@
 /* Base styles */
 
 body {
-  background:black;
-  color:white;
+  background:White;
+  color:Blue;
+  font-family: 'Modak', cursive;
   font-weight: 300;
   font-size: 16px;
   letter-spacing: .025rem;
