--- a/styles/base.css
+++ b/styles/base.css
@@ -79,7 +79,7 @@ iframe {
 .banner {
  min-height: 25vh;
   padding: 5rem 1rem;
-  background-image: url('../306295BC-D611-4BA3-B27A-838EABEA749C.jpeg');
+  background-image: url('../306295BC-D611-4BA3-B27A-838EABEA749C.jpg');
   background-position: center;
     }
 
