--- a/styles/base.css
+++ b/styles/base.css
@@ -71,15 +71,15 @@ iframe {
 }
 
 .profile-img {
-  max-height; 50vh;
-  width; auto;
+  max-height: 50vh;
+  width; auto:
   border-radius; 50%;
 }
 
 .banner {
  min-height: 25vh;
   padding: 5rem 1rem;
-  background-image: url('../306295BC-D611-4BA3-B27A-838EABEA749C.jpg');
+  background-image: url('../306295BC-D611-4BA3-B27A-838EABEA749C.jpeg');
   background-position: center;
     }
 
