--- a/styles/base.css
+++ b/styles/base.css
@@ -90,7 +90,7 @@ iframe {
   text-align: center; 
   background:#3ab8c9;
   color:white;
-  borde: 18px solid #8183bb
+  border; 18px solid #8183bb
   font-size: 3.5rem;
 }
   
