--- a/styles/base.css
+++ b/styles/base.css
@@ -109,7 +109,40 @@ background: #3ab8c9
   background: #ffff62
   padding: 2rem;
   color: black;
+}
+.footer {
+  text-align: center;
+  padding: 2rem;
+  font-size: 1.5rem;
+}
+
+.btn-1 {
+  font-family: 'Modak', cursive ;
+  background: #ff1493;
+  color: white;
+  padding: 1rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  border-radius: .25rem;
+  font-size: 2rem;
+  text-decoration: none;
+  display: inline-block;
+  margin-top: 2rem;
+  border: 1px solid white;
+  transition: border .3s ease;
+}
+
+btn-1:hover {
+  border: 15px solid #1493ff;
+}
 
 
-
+.copyright {
+  margin-top: 5rem;
+  background: white;
+  color: black;
+  text-align: center;
+  padding: .5rem;
+  font-size: .8rem;
+}
 
