--- a/styles/base.css
+++ b/styles/base.css
@@ -1,7 +1,7 @@
 /* Base styles */
 
 body {
-  background:White;
+  background: #deffde;
   color:Blue;
   font-family: 'Modak', cursive;
   font-weight: 300;
